@@ -1,5 +1,11 @@
-version 0.9.2:  width, height keywords added to Basemap.__init__.
-version 0.9.1:  createfigure method removed.
+version 0.9.8: remove linestyle kwarg from drawparallels and drawmeridians.
+               add fill_color kwarg to drawmapboundary.
+version 0.9.7: added lake_color kwarg to fillcontinents.
+version 0.9.6: added "labelstyle" keyword to drawparallels and drawmeridians.
+               added "zorder" kwarg to drawparallels, drawmeridians,
+               drawcoastlines, drawstates, drawcountries, drawrivers,
+version 0.9.2: width, height keywords added to Basemap.__init__.
+version 0.9.1: createfigure method removed.
 version 0.9: creatfigure method deprecated, new set_aspect axes method
              used to ensure maps have right aspect ratio. 
              pcolormesh, drawlsmask methods added.
